--- a/planesmith/app/src/main/res/values/strings.xml
+++ b/planesmith/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">planesmith</string>
+    <string name="story">Story</string>
+    <string name="characters">Characters</string>
+    <string name="world">World</string>
+    <string name="synopsis">Synopsis</string>
+    <string name="encyclopedia">Encyclopedia</string>
+    <string name="plus">+</string>
 </resources>
