--- a/planesmith/app/src/main/res/values/strings.xml
+++ b/planesmith/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="add_item">Add Item</string>
 
     //Strings for Character
-    <string name="character_name">Character Name</string>
+    <string name="character_name">Name</string>
     <string name="character_age">Age</string>
     <string name="character_height">Height</string>
     <string name="character_weight">Weight</string>
